@@ -10,6 +10,7 @@ with respect to new features and compatibility changes.
  * Converted wing_add_user.pl to Wing Command.
  * Added listing of admins via Wing Command.
  * Added modifying users via Wing Command.
+ * Add wing do to Wing Command, for firing off Wingman jobs.
 
 2013-05-19
  * Added EmailAllAdmins Wingman plugin.
